# dto/Admin.go
@@ -1,0 +1,8 @@
+package dto
+
+type Admin struct {
+	ID       int    `json:"id"`
+	Name     string `json:"name"`
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
